@@ -244,6 +244,7 @@ void OptionsManager::LoadDefaults() {
 	SetInt(_T("Audio Display Height"),100);
 	SetBool(_T("Audio Spectrum"),false);
 	SetText(_T("Audio HD Cache Location"),_T("default"));
+	SetText(_T("Audio HD Cache Name"),_T("audio%02i.tmp"));
 
 	SetInt(_T("Timing processor key start before thres"),5);
 	SetInt(_T("Timing processor key start after thres"),4);
